# strings2

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  Tested.txt
cmake/: config.cmake  global.cmake  globalcore.cmake  kstrings.cmake  kstringslib.cmake  strings2.cmake
cmake/projects/: kstrings.cmake  kstringslib.cmake
cmake/shared/: config.cmake  setup.cmake
src/: basics.cpp  basics.hpp  binary2strings.cpp  binary2strings.hpp  core.hpp  dirent.h  extracted_string.cpp  extracted_string.hpp  kstrings.hh  main.cc  memory_strings.cpp  memory_strings.h  memory_strings.hpp  module.cpp  module.hpp  print_buffer.cpp  print_buffer.hpp  resource.h  stdafx.cpp  stdafx.h  string_model.hpp  string_parser.cpp  string_parser.h  string_parser.hpp  strings.cpp  strings2.hh  targetver.h  targetver.hpp
src/kstrings/: basics.cc  basics.hh  binary2strings.cc  binary2strings.hh  core.hh  extracted-string.cc  extracted-string.hh  globals.hh  memory-strings.cc  memory-strings.hh  module.cc  module.hh  print-buffer.cc  print-buffer.hh  string-model.hh  string-parser.cc  string-parser.hh  utility.cc  utility.hh
src/strings2/: basics.cc  basics.hh  binary2strings.cc  binary2strings.hh  core.hh  extracted-string.cc  extracted-string.hh  globals.hh  memory-strings.cc  memory-strings.hh  module.cc  module.hh  print-buffer.cc  print-buffer.hh  string-parser.cc  string-parser.hh  utility.cc  utility.hh
